--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>AlgoranteR</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,34 +18,57 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/x-icon/favicon-32x32.png" alt="logo" />
+            <img class="logo-img" src="images/x-icon/favicon-32x32.png" alt="logo" />
           </a>
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.gg/Yp3vnRNa"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/discord.webp" alt="Discord" />
+            <img class="menu-btn" src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
             href="https://twitter.com/CodeCats10k"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/twitter.webp" alt="Twitter" />
+            <img class="menu-btn" src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
             href="https://opensea.io/collection/codecats"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/opensea.webp" alt="Opensea" />
+            <img src="images/header/insta.webp" alt="Instagram" />
           </a>
-          <button class="wallet-btn btn" id="connectWallet">
-            <span>Connect Wallet</span>
-          </button>
+          <!--<a
+            href="https://opensea.io/collection/codecats"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img class="menu-btn" src="images/header/opensea.webp" alt="Opensea" />
+          </a>
+          <a
+            href="https://opensea.io/collection/codecats"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img class="menu-btn" src="images/header/opensea.webp" alt="Opensea" />
+          </a>
+          <a
+            href="https://opensea.io/collection/codecats"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img class="menu-btn" src="images/header/opensea.webp" alt="Opensea" />
+          </a>-->
+          <a href="https://linktr.ee/sravindra7" target="_blank">
+              <button class="wallet-btn btn" id="connectWallet">
+                <span>Connect Wallet</span>
+              </button>
+          </a>
         </div>
       </div>
     </header>
@@ -56,7 +79,7 @@
         <ul
           id="countdown"
           class="count-down"
-          data-date="Feb 17, 2022 4:00:00 PM UTC"
+          data-date="June 5, 2022 3:00:00 PM UTC"
         >
           <li class="clock-item">
             <span class="count-number days">20</span>
@@ -78,17 +101,17 @@
             <p class="count-text">Sec</p>
           </li>
         </ul>
-        <h1>NFT Drop Coming Soon!!</h1>
+        <h1>Ranting Soon!</h1>
                
-        <p>A new batch of cute cats will be available very soon!</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+        <p>7 marketplaces | 365 Rants against Climate Change</p>
+        <a href="https://discord.gg/Yp3vnRNa" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+          ><span>Join the Angry Ranters Club</span>
         </a>
       </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
     <script src="js/countdown.js"></script>
-    <script src="js/app.js"></script>
+    <!--<script src="js/app.js"></script>-->
   </body>
 </html>
